// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGMap component Properties displays map with custom function location props 1`] = `
<DocumentFragment>
  <svg
    aria-label="label"
    class="svg-map"
    role="none"
    viewBox="viewBox"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      aria-label="name0-0"
      class="locationClassName-0"
      d="path0"
      id="id0"
      name="name0"
      role="none"
      tabindex="locationTabIndex-0"
    />
    <path
      aria-label="name1-1"
      class="locationClassName-1"
      d="path1"
      id="id1"
      name="name1"
      role="none"
      tabindex="locationTabIndex-1"
    />
    <path
      aria-label="name2-2"
      class="locationClassName-2"
      d="path2"
      id="id2"
      name="name2"
      role="none"
      tabindex="locationTabIndex-2"
    />
  </svg>
</DocumentFragment>
`;

exports[`SVGMap component Properties displays map with custom props 1`] = `
<DocumentFragment>
  <svg
    aria-label="label"
    class="className"
    role="role"
    viewBox="viewBox"
    xmlns="http://www.w3.org/2000/svg"
  >
    <text>
      childrenBefore
    </text>
    <path
      aria-checked="true"
      aria-label="name0"
      class="locationClassName"
      d="path0"
      id="id0"
      name="name0"
      role="locationRole"
      tabindex="locationTabIndex"
    />
    <path
      aria-checked="true"
      aria-label="name1"
      class="locationClassName"
      d="path1"
      id="id1"
      name="name1"
      role="locationRole"
      tabindex="locationTabIndex"
    />
    <path
      aria-checked="true"
      aria-label="name2"
      class="locationClassName"
      d="path2"
      id="id2"
      name="name2"
      role="locationRole"
      tabindex="locationTabIndex"
    />
    <text>
      childrenAfter
    </text>
  </svg>
</DocumentFragment>
`;

exports[`SVGMap component Properties displays map with default props 1`] = `
<DocumentFragment>
  <svg
    aria-label="label"
    class="svg-map"
    role="none"
    viewBox="viewBox"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      aria-label="name0"
      class="svg-map__location"
      d="path0"
      id="id0"
      name="name0"
      role="none"
      tabindex="0"
    />
    <path
      aria-label="name1"
      class="svg-map__location"
      d="path1"
      id="id1"
      name="name1"
      role="none"
      tabindex="0"
    />
    <path
      aria-label="name2"
      class="svg-map__location"
      d="path2"
      id="id2"
      name="name2"
      role="none"
      tabindex="0"
    />
  </svg>
</DocumentFragment>
`;
